unpackaged/main/default/objects/Brand_Form_Picklist__mdt/Brand_Form_Picklist__mdt.object-meta.xml
<CustomObject>
    <description>This custom setting is used to store Picklist Values for fields corresponding to each brand. Also this contains Product Category and Sub Category for each Brand.</description>
    <label>Brand Form Picklist</label>
    <pluralLabel>Brand Form Picklists</pluralLabel>
</CustomObject>