unpackaged/main/default/objects/Brand_Form_Picklist__mdt/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <label>Brand Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>