unpackaged/main/default/objects/Brand_Form_Picklist__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>This field is used to match the Case Source Country</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>