unpackaged/main/default/objects/Brand_Form_Picklist__mdt/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <description>DEPRECATED - DO NOT USE</description>
    <inlineHelpText>DEPRECATED - DO NOT USE</inlineHelpText>
    <label>Picklist Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>