unpackaged/main/default/objects/Brand_Form_Picklist__mdt/fields/Picklist_Values_JSON__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values_JSON__c</fullName>
    <label>Picklist Values JSON</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>