unpackaged/main/default/objects/Brand_Form_Picklist__mdt/validationRules/Picklist_Values_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Picklist_Values_Required</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Picklist_Values_JSON__c ) = 0</errorConditionFormula>
    <errorDisplayField>Picklist_Values_JSON__c</errorDisplayField>
    <errorMessage>You must enter a value.</errorMessage>
</ValidationRule>