unpackaged/main/default/objects/Brand_Form_Picklist__mdt/listViews/Calvin_Klein_CA.listView-meta.xml
<ListView>
    <fullName>Calvin_Klein_CA</fullName>
    <columns>MasterLabel</columns>
    <columns>Brand_Name__c</columns>
    <columns>Country__c</columns>
    <columns>Sequence__c</columns>
    <columns>Question__c</columns>
    <columns>Picklist_Values__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand_Name__c</field>
        <operation>contains</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>CA</value>
    </filters>
    <label>Calvin Klein CA</label>
</ListView>