unpackaged/main/default/objects/Brand_Form_Picklist__mdt/listViews/LightningForm.listView-meta.xml
<ListView>
    <fullName>LightningForm</fullName>
    <columns>MasterLabel</columns>
    <columns>Sequence__c</columns>
    <columns>Brand_Name__c</columns>
    <columns>Question__c</columns>
    <columns>Picklist_Values__c</columns>
    <filterScope>Everything</filterScope>
    <label>LightningForm</label>
</ListView>