unpackaged/main/default/objects/Brand_Form_Picklist__mdt/listViews/Show_ALL.listView-meta.xml
<ListView>
    <fullName>Show_ALL</fullName>
    <columns>MasterLabel</columns>
    <columns>Sequence__c</columns>
    <columns>Brand_Name__c</columns>
    <columns>Question__c</columns>
    <columns>Picklist_Values__c</columns>
    <filterScope>Everything</filterScope>
    <label>Show ALL</label>
</ListView>