unpackaged/main/default/objects/Brand_Form_Picklist__mdt/listViews/styleBureau.listView-meta.xml
<ListView>
    <fullName>styleBureau</fullName>
    <columns>MasterLabel</columns>
    <columns>Sequence__c</columns>
    <columns>Brand_Name__c</columns>
    <columns>Question__c</columns>
    <columns>Picklist_Values__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand_Name__c</field>
        <operation>startsWith</operation>
        <value>style</value>
    </filters>
    <label>styleBureau</label>
</ListView>