unpackaged/main/default/objects/Brand_Form_Picklist__mdt/listViews/Tommy.listView-meta.xml
<ListView>
    <fullName>Tommy</fullName>
    <columns>MasterLabel</columns>
    <columns>Sequence__c</columns>
    <columns>Brand_Name__c</columns>
    <columns>Question__c</columns>
    <columns>Picklist_Values__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand_Name__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Tommy</label>
</ListView>