unpackaged/main/default/objects/Brand_Form_Picklist__mdt/listViews/Warners.listView-meta.xml
<ListView>
    <fullName>Warners</fullName>
    <columns>Brand_Name__c</columns>
    <columns>Sequence__c</columns>
    <columns>Question__c</columns>
    <columns>Picklist_Values__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand_Name__c</field>
        <operation>startsWith</operation>
        <value>War</value>
    </filters>
    <label>Warners</label>
</ListView>